fix: content gap homepage

--- a/frontend/src/app/page.module.sass
+++ b/frontend/src/app/page.module.sass
@@ -2,6 +2,8 @@
 
 .app
   position: relative
+  display: flex
+  flex-direction: column
   min-height: 100vh
   width: 100vw
   padding-top: var(--space-content-top)
